--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -37,11 +37,13 @@ mastodon:
       # ReadWriteOnce is more widely supported than ReadWriteMany, but limits
       # scalability, since it requires the Rails and Sidekiq pods to run on the
       # same node.
+      storageClassName: gp3-retain
       accessMode: ReadWriteOnce
       resources:
         requests:
           storage: 10Gi
     system:
+      storageClassName: gp3-retain
       accessMode: ReadWriteOnce
       resources:
         requests:
