--- a/chart/templates/pvc-system.yaml
+++ b/chart/templates/pvc-system.yaml
@@ -1,4 +1,4 @@
-# {{- if (not .Values.mastodon.s3.enabled) -}}
+{{- if (not .Values.mastodon.s3.enabled) -}}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -13,4 +13,4 @@ spec:
     {{- toYaml . | nindent 4 }}
   {{- end }}
   storageClassName: {{ .Values.mastodon.persistence.system.storageClassName }}
-# {{- end }}
+{{- end }}
