--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -37,13 +37,13 @@ mastodon:
       # ReadWriteOnce is more widely supported than ReadWriteMany, but limits
       # scalability, since it requires the Rails and Sidekiq pods to run on the
       # same node.
-      storageClassName: ebs-sc
+      storageClassName: gp3-mastodon
       accessMode: ReadWriteOnce
       resources:
         requests:
           storage: 10Gi
     system:
-      storageClassName: ebs-sc
+      storageClassName: gp3-mastodon
       accessMode: ReadWriteOnce
       resources:
         requests:
