--- a/chart/templates/job-assets-precompile.yaml
+++ b/chart/templates/job-assets-precompile.yaml
@@ -26,12 +26,12 @@ spec:
         podAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
-                matchExpressions:
-                  - key: app.kubernetes.io/part-of
-                    operator: In
-                    values:
-                      - rails
-              topologyKey: kubernetes.io/hostname
+#                 matchExpressions:
+#                   - key: app.kubernetes.io/part-of
+#                     operator: In
+#                     values:
+#                       - rails
+#               topologyKey: kubernetes.io/hostname
       {{- end }}
       volumes:
         - name: assets
