--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -49,7 +49,7 @@ mastodon:
         requests:
           storage: 100Gi
   s3:
-    enabled: false
+    enabled: true
     access_key: ""
     access_secret: ""
     # you can also specify the name of an existing Secret
